# audio_controller

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
moudilu/audio_controller/: audio_controller.py  event_router.py  hk970.py  pcm_monitor.py
moudilu/audio_controller/devices/: bluetoothController.py  hk970.py  pcm_monitor.py  remote_control.py  rest_api.py
resources/: audio-controller  audio-controller.service
