[tool.poetry]
name = "moudilu-audio-controller"
version = "0.2.1"
description = "Control audio output devices with their ALSA device and via remote."
authors = ["Moudilu"]
readme = "README.md"
packages = [{include = "moudilu"}]

[tool.poetry.scripts]
audio_controller = "moudilu.audio_controller.audio_controller:main"

[tool.poetry.dependencies]
python = "^3.11"
argparse = "^1.4.0"
lirc = "^3.0.0"
psutil = "^7.0.0"
dbus-next = "^0.2.3"
evdev = "^1.9.1"
uvicorn = "^0.34.2"
fastapi = "^0.115.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
